2013-05-23  Edjunior Machado  <emachado@linux.vnet.ibm.com>

	* sysdeps/powerpc/sys/platform/ppc.h: Add __ppc_yield,
	__ppc_mdoio and __ppc_mdoom.
	* manual/platform.texi: Document new functions __ppc_yield,
	__ppc_mdoio and __ppc_mdoom.

2013-05-22  Edjunior Barbosa Machado  <emachado@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/bits/siginfo.h (siginfo_t): Add si_addr_lsb
	to _sifields.sigfault.
	(si_addr_lsb): Define new macro.
	(BUS_MCEERR_AR, BUS_MCEERR_AO): Define new values.
	* sysdeps/unix/sysv/linux/sparc/bits/siginfo.h: Likewise.
	* sysdeps/unix/sysv/linux/x86/bits/siginfo.h: Likewise.

2013-05-15  Edjunior Machado  <emachado@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/s390/bits/siginfo.h (siginfo_t): Remove
	si_trapno and add si_addr_lsb to _sifields.sigfault.
	(si_trapno): Remove macro.
	(si_addr_lsb): Define new macro.
	(BUS_MCEERR_AR, BUS_MCEERR_AO): Define new values.

2013-05-17  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	[BZ # 15497]
	* sysdeps/powerpc/fpu/e_hypot.c (GET_TWO_FLOAT_WORD): Fix test for
	negative infinity on POWER6 or lower.
	* sysdeps/powerpc/fpu/e_hypotf.c (GET_TWO_FLOAT_WORD): Likewise.

2013-04-30  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/Versions: Add __vdso_time symbol.
	* sysdeps/unix/sysv/linux/powerpc/bits/libc-vdso.h: Add __vdso_time
	definition.
	(VDSO_IFUNC_RET): Cast to void * to silence compiler warning.
	* sysdeps/unix/sysv/linux/powerpc/init-first.c
	(_libc_vdso_platform_setup): Add __vdso_time initialization.
	* sysdeps/unix/sysv/linux/powerpc/time.c: New file: time implementation
	for PowerPC using vDSO where is avaliable or gettimeofday as a fallback.

2013-04-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/power5/fpu/s_modf.c: Moved to ...
	* sysdeps/powerpc/power5+/fpu/s_modf.c: ... this.
	* sysdeps/powerpc/power5/fpu/s_modff.c: Moved to ...
	* sysdeps/powerpc/power5+/fpu/s_modff.c: ... this.